Fixed some issues that made the stars not work on iOS native.

--- a/MovieBuff/www/css/style.css
+++ b/MovieBuff/www/css/style.css
@@ -50,7 +50,7 @@
 
 #rating-widget {
 	position: absolute;
-	top: 350px;
+	top: 330px;
 	left: 50%;
 	/*margin-left: -107.5px;*/
 }
